add: some bridge invoices tests